--- a/training_notebooks/Train_yolov5_part_2.ipynb
+++ b/training_notebooks/Train_yolov5_part_2.ipynb
@@ -6550,6 +6550,11 @@
       "                 Class     Images  Instances          P          R      mAP50   mAP50-95: 100%|██████████| 28/28 [00:17<00:00,  1.64it/s]\n",
       "all       1338       1799      0.697      0.753      0.697      0.375\n",
       "\n",
+      "Epoch    GPU_mem   box_loss   obj_loss   cls_loss  Instances       Size\n",
+      "       8/14      14.9G    0.03754   0.005366   0.004966         34        672: 100%|██████████| 134/134 [01:10<00:00,  1.91it/s]\n",
+      "                 Class     Images  Instances          P          R      mAP50   mAP50-95: 100%|██████████| 28/28 [00:17<00:00,  1.64it/s]\n",
+      "all       1338       1799      0.696      0.784      0.723       0.41\n",
+      "\n",
       "Epoch    GPU_mem   box_loss   obj_loss   cls_loss  Instances       Size\n"
      ]
     }
